Use relative_url to clean up local site dev
This undoes the hardcoded owasp-halifax url prefixes, which removes the
need for the extra build.sh script.

Since jekyll 3.3's release, github pages has automatically set the
baseurl value for a website.
https://blog.github.com/2016-11-02-what-s-new-in-github-pages-with-jekyll-3-3/

--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -2,15 +2,15 @@
 permalink: /pages/blog/
 layout: default
 title: Blog for OWASP Halifax
-css: /owasp-halifax/assets/pages/blog/css/blog.css
-js: /owasp-halifax/assets/pages/blog/js/blog.js
+css: /assets/pages/blog/css/blog.css
+js: /assets/pages/blog/js/blog.js
 ---
 
 <h2>OWASP Halifax Blog</h2>
 
 <div class="blog-container">
   {% for post in site.posts %}
-  <a class="blog-links" href="/owasp-halifax{{ post.url }}">{{ post.date }} - {{ post.title }}</a>
+  <a class="blog-links" href="{{ post.url }}">{{ post.date }} - {{ post.title }}</a>
   <br>
   {% endfor %}
 </div>
