--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -2,8 +2,8 @@
 permalink: /pages/donate/
 layout: default
 title: Donate to OWASP Halifax
-css: /owasp-halifax/assets/pages/donate/css/donate.css
-js: /owasp-halifax/assets/pages/donate/js/donate.js
+css: /assets/pages/donate/css/donate.css
+js: /assets/pages/donate/js/donate.js
 ---
 
 <h2>Donating to OWASP Halifax</h2>
@@ -23,7 +23,9 @@ js: /owasp-halifax/assets/pages/donate/js/donate.js
 
 <p>Any donation amount is alright as anything helps with our operational costs.</p>
 
-<a target="_blank" href="https://www.regonline.com/donation_1044369"><img src="/owasp-halifax/assets/pages/donate/img/donate.gif"/></a>
+<a target="_blank" href="https://www.regonline.com/donation_1044369">
+  <img src={{ "/assets/pages/donate/img/donate.gif" | relative_url }}>
+</a>
 <br>
 <br>
 
