--- a/_pages/index.html
+++ b/_pages/index.html
@@ -2,12 +2,12 @@
 permalink: /
 layout: default
 title: OWASP Halifax
-css: /owasp-halifax/assets/pages/index/css/index.css
-js: /owasp-halifax/assets/pages/index/js/index.js
+css: /assets/pages/index/css/index.css
+js: /assets/pages/index/js/index.js
 ---
 
 <figure>
-  <img src="/owasp-halifax/assets/img/owasp_halifax.png" style="width:50%;"/>
+  <img src={{ "/assets/img/owasp_halifax.png" | relative_url }} style="width:50%;"/>
 </figure>
 
 <h3>About Us</h3>
